--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.61.5",
+    "@tanstack/react-router": "^1.114.32",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -29,6 +30,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@tanstack/react-router-devtools": "^1.114.32",
+    "@tanstack/router-plugin": "^1.114.32",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
